--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="C:\html\Photo.jpg" alt="">
+                    <img src="Photo.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Thigulla Pragna and I'm a <span class="typing-2"></span></div>
@@ -153,35 +153,35 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="C:\html\image1.jpg" alt="">
+                        <img src="image1.jpg" alt="">
                         <div class="text">Lion</div>
                         <p>Narnia.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\html\image2.jpg" alt="">
+                        <img src="image2.jpg" alt="">
                         <div class="text">Peacock</div>
                         <p>Athira.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\html\image3.jpg" alt="">
+                        <img src="image3.jpg" alt="">
                         <div class="text">Eagle</div>
                         <p>Garuda</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\html\image4.jpg" alt="">
+                        <img src="image4.jpg" alt="">
                         <div class="text">Elephant</div>
                         <p>Konni Soman.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\html\image5.jpg" alt="">
+                        <img src="image5.jpg" alt="">
                         <div class="text">Dog</div>
                         <p>Thor.</p>
                     </div>
